# CPP_TECHNICAL_ASSIGNMENT

./: CMakeLists.txt  README.md  main.cpp
Task1_EvenOddMultithreading/: main
Task2_EncryptedFileStorage/: encrypt.cpp  encrypt.h  main.cpp
Task3_OpenCVVideoCaptu/: README_OpenCV.txt  main
